fixed the dark mode

--- a/new crypto/settings.css
+++ b/new crypto/settings.css
@@ -94,6 +94,7 @@ html {
     color: white;
     width: 100%;
 }
+
 .allContent {
     width: 100%;
     height: 100%;
@@ -101,6 +102,7 @@ html {
     justify-content: center;
     align-items: center;
 }
+
 .mainDiv {
     width: 600px;
     height: 600px;
@@ -110,37 +112,45 @@ html {
     align-items: center;
     background-color: #01C38D;
     border-radius: 10px;
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s;
+    -webkit-animation: fadein 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
+    /* Internet Explorer */
+    -o-animation: fadein 2s;
+    /* Opera < 12.1 */
+    animation: fadein 2s;
 }
-.settingsHeader{
+
+.settingsHeader {
     width: 100%;
     height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.settingsOptions{
+
+.settingsOptions {
     width: 100%;
     height: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.settingsOptions p{
+
+.settingsOptions p {
     font-size: 18px;
 }
-button {
-    padding: 10px;
-    background-color: #222831;
-    color: white;
-    border: none;
-    border-radius: 10px;
+input{
+    font: inherit;
+    color: currentColor;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid currentColor;
+    border-radius: 0.15em;
+    transform: translateY(-0.075em);
 }
-
-.dark{
+.dark {
     filter: invert(100%) hue-rotate(180deg);
 }
